feat(asn1): support OID primitive (when add-exports)